--- a/index.html
+++ b/index.html
@@ -73,22 +73,25 @@ button{
   background:#fff;
   box-shadow:0 4px 10px rgba(0,0,0,.1);
   z-index:1000;
-  padding:10px;
+  padding:8px;
   display:flex;
   justify-content:space-between;
   align-items:center;
 }
 
-.timer,.submit-top{
-  padding:10px 18px;
+.timer, .submit-top{
+  flex:1;
+  text-align:center;
+  padding:12px 0;
+  margin:0 4px;
   border-radius:12px;
-  color:#fff;
   font-weight:bold;
   font-size:1em;
+  color:#fff;
 }
 
-.timer{background:#4caf50}
-.submit-top{background:#f44336;cursor:pointer}
+.timer{background:#4caf50;}      /* hijau */
+.submit-top{background:#f44336;} /* merah */
 
 .container{
   max-width:600px;
@@ -149,11 +152,22 @@ button{
   width:100%;
   background:#fff;
   display:flex;
-  gap:10px;
-  padding:10px;
+  gap:8px;
+  padding:8px;
   box-shadow:0 -4px 10px rgba(0,0,0,.1);
 }
-.nav-bottom button{flex:1; padding:12px; font-weight:bold; font-size:1em}
+.nav-bottom button{
+  flex:1;
+  padding:12px 0;
+  font-weight:bold;
+  font-size:1em;
+  border-radius:12px;
+  border:none;
+  color:#fff;
+}
+
+#prev{background:#2196f3;}  /* biru */
+#next{background:#ff9800;}  /* oranye */
 </style>
 </head>
 <body>
