--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ body{
   max-width:380px;
   background:#fff;
   padding:35px;
-  border-radius:20px;
   text-align:center;
   box-shadow:0 15px 40px rgba(0,0,0,.4);
+  border-radius:0; /* hilangkan border-radius */
 }
 
 .login-container h1{color:#1a237e}
@@ -41,8 +41,8 @@ input{
   width:100%;
   padding:14px;
   margin:10px 0;
-  border-radius:12px;
   border:2px solid #bbb;
+  border-radius:0; /* hilangkan border-radius */
 }
 
 button{
@@ -52,7 +52,7 @@ button{
   background:#3f51b5;
   color:#fff;
   border:none;
-  border-radius:12px;
+  border-radius:0; /* hilangkan border-radius */
   font-weight:bold;
   cursor:pointer;
 }
@@ -73,7 +73,7 @@ button{
   background:#fff;
   box-shadow:0 4px 10px rgba(0,0,0,.1);
   z-index:1000;
-  padding:8px;
+  padding:6px 6px; /* dikurangi kanan/kiri */
   display:flex;
   justify-content:space-between;
   align-items:center;
@@ -84,19 +84,19 @@ button{
   text-align:center;
   padding:12px 0;
   margin:0 4px;
-  border-radius:12px;
   font-weight:bold;
   font-size:1em;
   color:#fff;
+  border-radius:0; /* hilangkan border-radius */
 }
 
 .timer{background:#4caf50;}      /* hijau */
 .submit-top{background:#f44336;} /* merah */
 
 .container{
-  max-width:600px;
+  max-width:580px; /* dikurangi supaya lebih pas HP portrait */
   margin:auto;
-  padding:15px;
+  padding:10px; /* dikurangi */
   overflow:auto;
   height:calc(100vh - 140px);
 }
@@ -107,17 +107,17 @@ button{
 .box-passage{
   background:#e3f2fd;
   padding:20px;
-  border-radius:16px;
   border:2px solid #bbdefb;
   margin-bottom:15px;
+  border-radius:0; /* hilangkan border-radius */
 }
-.box-passage audio, .box-passage img{width:100%; margin-top:10px; border-radius:12px;}
+.box-passage audio, .box-passage img{width:100%; margin-top:10px; border-radius:0;}
 
 .box-question{
   background:#fff3e0;
   padding:20px;
-  border-radius:16px;
   border:2px solid #ffcc80;
+  border-radius:0; /* hilangkan border-radius */
 }
 
 .options {margin-top:15px;}
@@ -152,8 +152,8 @@ button{
   width:100%;
   background:#fff;
   display:flex;
-  gap:8px;
-  padding:8px;
+  gap:6px;
+  padding:6px 6px; /* dikurangi kanan/kiri */
   box-shadow:0 -4px 10px rgba(0,0,0,.1);
 }
 .nav-bottom button{
@@ -161,9 +161,9 @@ button{
   padding:12px 0;
   font-weight:bold;
   font-size:1em;
-  border-radius:12px;
   border:none;
   color:#fff;
+  border-radius:0; /* hilangkan border-radius */
 }
 
 #prev{background:#2196f3;}  /* biru */
