--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@ button{
 .timer{background:#4caf50;}      /* hijau */
 .submit-top{background:#f44336;} /* merah */
 
+/* Container soal lebih sempit supaya tidak mepet kanan */
 .container{
-  max-width:580px; /* dikurangi supaya lebih pas HP portrait */
+  max-width:540px; /* dikurangi dari sebelumnya 580px */
   margin:auto;
-  padding:10px; /* dikurangi */
+  padding:10px 5px; /* padding kiri & kanan lebih kecil */
   overflow:auto;
   height:calc(100vh - 140px);
 }
