--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ button{
 
 /* Container soal lebih sempit supaya tidak mepet kanan */
 .container{
-  max-width:580px; /* dikurangi dari sebelumnya 580px */
+  max-width:540px; /* dikurangi dari sebelumnya 580px */
   margin:auto;
   padding:10px 5px; /* padding kiri & kanan lebih kecil */
   overflow:auto;
@@ -129,16 +129,21 @@ button{
   cursor:pointer;
 }
 .option-item input[type="radio"]{
-  width:20px;
-  height:20px;
-  margin-right:10px;
-  margin-top:3px;
+  display:none; /* sembunyikan radio default */
 }
 .option-letter{
+  width:28px;
+  height:28px;
+  min-width:28px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  border-radius:50%; /* bulat */
+  background:#1976d2;
+  color:#fff;
   font-weight:bold;
-  color:#1976d2;
-  min-width:20px;
-  display:inline-block;
+  margin-right:12px;
+  flex-shrink:0;
 }
 .option-text{
   line-height:1.4;
@@ -327,5 +332,3 @@ document.addEventListener("DOMContentLoaded",()=>{
 
 </body>
 </html>
-
-
