--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body{
   padding:35px;
   text-align:center;
   box-shadow:0 15px 40px rgba(0,0,0,.4);
-  border-radius:0; /* hilangkan border-radius */
+  border-radius:0;
 }
 
 .login-container h1{color:#1a237e}
@@ -42,7 +42,7 @@ input{
   padding:14px;
   margin:10px 0;
   border:2px solid #bbb;
-  border-radius:0; /* hilangkan border-radius */
+  border-radius:0;
 }
 
 button{
@@ -52,7 +52,7 @@ button{
   background:#3f51b5;
   color:#fff;
   border:none;
-  border-radius:0; /* hilangkan border-radius */
+  border-radius:0;
   font-weight:bold;
   cursor:pointer;
 }
@@ -73,7 +73,7 @@ button{
   background:#fff;
   box-shadow:0 4px 10px rgba(0,0,0,.1);
   z-index:1000;
-  padding:6px 6px; /* dikurangi kanan/kiri */
+  padding:6px 6px;
   display:flex;
   justify-content:space-between;
   align-items:center;
@@ -87,17 +87,17 @@ button{
   font-weight:bold;
   font-size:1em;
   color:#fff;
-  border-radius:0; /* hilangkan border-radius */
+  border-radius:0;
 }
 
-.timer{background:#4caf50;}      /* hijau */
-.submit-top{background:#f44336;} /* merah */
+.timer{background:#4caf50;}      
+.submit-top{background:#f44336;} 
 
 /* Container soal lebih sempit supaya tidak mepet kanan */
 .container{
-  max-width:540px; /* dikurangi dari sebelumnya 580px */
+  max-width:540px;
   margin:auto;
-  padding:10px 5px; /* padding kiri & kanan lebih kecil */
+  padding:10px 5px;
   overflow:auto;
   height:calc(100vh - 140px);
 }
@@ -110,7 +110,7 @@ button{
   padding:20px;
   border:2px solid #bbdefb;
   margin-bottom:15px;
-  border-radius:0; /* hilangkan border-radius */
+  border-radius:0;
 }
 .box-passage audio, .box-passage img{width:100%; margin-top:10px; border-radius:0;}
 
@@ -118,7 +118,7 @@ button{
   background:#fff3e0;
   padding:20px;
   border:2px solid #ffcc80;
-  border-radius:0; /* hilangkan border-radius */
+  border-radius:0;
 }
 
 .options {margin-top:15px;}
@@ -129,8 +129,10 @@ button{
   cursor:pointer;
 }
 .option-item input[type="radio"]{
-  display:none; /* sembunyikan radio default */
+  display:none; 
 }
+
+/* Bulatan angka default putih, berubah biru muda saat dipilih */
 .option-letter{
   width:28px;
   height:28px;
@@ -138,13 +140,21 @@ button{
   display:flex;
   justify-content:center;
   align-items:center;
-  border-radius:50%; /* bulat */
-  background:#1976d2;
-  color:#fff;
+  border-radius:50%;
+  border:2px solid #1976d2;
+  background:#fff; 
+  color:#1976d2; 
   font-weight:bold;
   margin-right:12px;
   flex-shrink:0;
+  transition: background 0.2s, color 0.2s;
 }
+
+.option-item input[type="radio"]:checked + .option-letter{
+  background:#64b5f6; 
+  color:#fff;         
+}
+
 .option-text{
   line-height:1.4;
   flex:1;
@@ -159,7 +169,7 @@ button{
   background:#fff;
   display:flex;
   gap:6px;
-  padding:6px 6px; /* dikurangi kanan/kiri */
+  padding:6px 6px;
   box-shadow:0 -4px 10px rgba(0,0,0,.1);
 }
 .nav-bottom button{
@@ -169,11 +179,11 @@ button{
   font-size:1em;
   border:none;
   color:#fff;
-  border-radius:0; /* hilangkan border-radius */
+  border-radius:0;
 }
 
-#prev{background:#2196f3;}  /* biru */
-#next{background:#ff9800;}  /* oranye */
+#prev{background:#2196f3;}  
+#next{background:#ff9800;}  
 </style>
 </head>
 <body>
