--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body{
   width:90%;
   max-width:300px;
   background:#fff;
-  padding:35px;
+  padding:25px;
   text-align:center;
   box-shadow:0 15px 40px rgba(0,0,0,.4);
   border-radius:0;
@@ -38,7 +38,7 @@ body{
 .login-container p{color:#555}
 
 input{
-  width:100%;
+  width:90%;
   padding:14px;
   margin:10px 0;
   border:2px solid #bbb;
@@ -193,11 +193,11 @@ button{
   <div class="login-container">
     <h1>Latihan Reading Korea</h1>
     <p>40 Soal Pilihan Ganda | Waktu: 50 Menit</p>
-    <h2>🔐 Masuk ke Latihan</h2>
-    <input id="username" placeholder="Username / 이름">
-    <input id="password" type="password" placeholder="Password / 비밀번호">
-    <input id="kode" placeholder="Kode Soal / 시험코드">
-    <button id="btnLogin">MULAI / 시작</button>
+    <h2>ðŸ” Masuk ke Latihan</h2>
+    <input id="username" placeholder="Username / ì´ë¦„">
+    <input id="password" type="password" placeholder="Password / ë¹„ë°€ë²ˆí˜¸">
+    <input id="kode" placeholder="Kode Soal / ì‹œí—˜ì½”ë“œ">
+    <button id="btnLogin">MULAI / ì‹œìž‘</button>
   </div>
 </div>
 
