--- a/index.html
+++ b/index.html
@@ -4,348 +4,204 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Latihan Reading Korea</title>
+
 <style>
 body{
   margin:0;
-  font-family:'Segoe UI',Arial,sans-serif;
-  background:#f5f5f5;
+  font-family:Segoe UI, Arial, sans-serif;
+  background:#f2f2f2;
 }
 
-/* LOGIN */
-#login-page{
-  min-height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background:
-    linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
-    url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg')
-    center/cover no-repeat;
-}
-
-.login-container{
-  width:90%;
-  max-width:300px;
-  background:#fff;
-  padding:25px;
-  text-align:center;
-  box-shadow:0 15px 40px rgba(0,0,0,.4);
-  border-radius:0;
-}
-
-.login-container h1{color:#1a237e}
-.login-container h2{color:#4a148c}
-.login-container p{color:#555}
-
-input{
-  width:90%;
-  padding:14px;
-  margin:10px 0;
-  border:2px solid #bbb;
-  border-radius:0;
-}
-
-button{
-  width:100%;
-  padding:16px;
-  margin-top:10px;
-  background:#3f51b5;
-  color:#fff;
-  border:none;
-  border-radius:0;
-  font-weight:bold;
-  cursor:pointer;
-}
-
-/* QUIZ */
-#quiz-page{
-  display:none;
-  min-height:100vh;
-  padding-top:70px;
-  padding-bottom:70px;
-}
-
-.header-fixed{
+.header{
   position:fixed;
   top:0;
   left:0;
-  width:96%;
-  background:#fff;
-  box-shadow:0 4px 10px rgba(0,0,0,.1);
-  z-index:1000;
-  padding:6px 6px;
+  right:0;
   display:flex;
   justify-content:space-between;
+  padding:8px 12px;
+  background:#fff;
+  border-bottom:1px solid #ccc;
+  z-index:1000;
+}
+
+.timer, .submit-btn{
+  width:90px;
+  height:36px;
+  display:flex;
   align-items:center;
-}
-
-.timer, .submit-top{
-  flex:1;
-  text-align:center;
-  padding:12px 0;
-  margin:0 4px;
+  justify-content:center;
   font-weight:bold;
-  font-size:1em;
-  color:#fff;
-  border-radius:0;
+  font-size:14px;
 }
 
-.timer{background:#4caf50;}      
-.submit-top{background:#f44336;} 
+.timer{background:#eee;}
+.submit-btn{background:#ff9800;color:#fff;cursor:pointer}
 
-/* Container soal lebih sempit supaya tidak mepet kanan */
 .container{
-  max-width:580px;
-  margin:auto;
-  padding:10px 5px;
-  overflow:auto;
-  height:calc(100vh - 140px);
+  max-width:480px;
+  margin:70px auto 80px;
+  padding:12px;
 }
-
-.question-wrapper{display:none; margin-bottom:30px;}
-.question-wrapper.active{display:block}
 
 .box-passage{
   background:#e3f2fd;
-  padding:20px;
-  border:2px solid #bbdefb;
-  margin-bottom:15px;
-  border-radius:0;
+  padding:12px;
+  margin-bottom:12px;
 }
-.box-passage audio, .box-passage img{width:100%; margin-top:10px; border-radius:0;}
 
 .box-question{
-  background:#fff3e0;
-  padding:20px;
-  border:2px solid #ffcc80;
-  border-radius:0;
+  background:#fff;
+  padding:12px;
 }
 
-.options {margin-top:15px;}
 .option-item{
   display:flex;
-  align-items:flex-start;
   margin:10px 0;
   cursor:pointer;
 }
-.option-item input[type="radio"]{
-  display:none; 
-}
 
-/* Bulatan angka default putih, berubah biru muda saat dipilih */
+.option-item input{display:none;}
+
 .option-letter{
   width:28px;
   height:28px;
-  min-width:28px;
-  display:flex;
-  justify-content:center;
-  align-items:center;
   border-radius:50%;
   border:2px solid #1976d2;
-  background:#fff; 
-  color:#1976d2; 
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  margin-right:10px;
+  color:#1976d2;
   font-weight:bold;
-  margin-right:12px;
-  flex-shrink:0;
-  transition: background 0.2s, color 0.2s;
 }
 
-.option-item input[type="radio"]:checked + .option-letter{
-  background:#64b5f6; 
-  color:#fff;         
+.option-item input:checked + .option-letter{
+  background:#64b5f6;
+  color:#fff;
 }
 
-.option-text{
-  line-height:1.4;
-  flex:1;
-}
-
-/* NAV BOTTOM */
-.nav-bottom{
+.footer-nav{
   position:fixed;
   bottom:0;
   left:0;
-  width:96%;
-  background:#fff;
+  right:0;
   display:flex;
-  gap:6px;
-  padding:6px 6px;
-  box-shadow:0 -4px 10px rgba(0,0,0,.1);
-}
-.nav-bottom button{
-  flex:1;
-  padding:12px 0;
-  font-weight:bold;
-  font-size:1em;
-  border:none;
-  color:#fff;
-  border-radius:0;
+  background:#fff;
+  border-top:1px solid #ccc;
 }
 
-#prev{background:#2196f3;}  
-#next{background:#ff9800;}  
+.footer-nav button{
+  flex:1;
+  height:44px;
+  border:none;
+  font-weight:bold;
+}
+
+#resultBox{
+  display:none;
+  padding:16px;
+}
 </style>
 </head>
+
 <body>
 
-<!-- LOGIN PAGE -->
-<div id="login-page">
-  <div class="login-container">
-    <h1>Latihan Reading Korea</h1>
-    <p>40 Soal Pilihan Ganda | Waktu: 50 Menit</p>
-    <h2>ðŸ” Masuk ke Latihan</h2>
-    <input id="username" placeholder="Username / ì´ë¦„">
-    <input id="password" type="password" placeholder="Password / ë¹„ë°€ë²ˆí˜¸">
-    <input id="kode" placeholder="Kode Soal / ì‹œí—˜ì½”ë“œ">
-    <button id="btnLogin">MULAI / ì‹œìž‘</button>
-  </div>
+<div class="header">
+  <div class="submit-btn" onclick="submitQuiz(false)">SUBMIT</div>
+  <div class="timer" id="timer">50:00</div>
 </div>
 
-<!-- QUIZ PAGE -->
-<div id="quiz-page">
-  <div class="header-fixed">
-    <div class="submit-top" id="submitTop">SUBMIT</div>
-    <div class="timer" id="timer">50:00</div>
-  </div>
+<div class="container" id="quizContainer"></div>
 
-  <div class="container">
-    <form id="quiz-form"></form>
-  </div>
+<div class="footer-nav">
+  <button onclick="prevQ()">PREV</button>
+  <button onclick="nextQ()">NEXT</button>
+</div>
 
-  <div class="nav-bottom">
-    <button id="prev">PREV</button>
-    <button id="next">NEXT</button>
-  </div>
+<div class="container" id="resultBox">
+  <h2>Hasil Ujian</h2>
+  <div id="scoreText"></div>
+  <hr>
+  <div id="reviewBox"></div>
 </div>
 
 <script>
-document.addEventListener("DOMContentLoaded",()=>{
-  const loginPage=document.getElementById("login-page");
-  const quizPage=document.getElementById("quiz-page");
-  const btnLogin=document.getElementById("btnLogin");
-  const form=document.getElementById("quiz-form");
-  const prev=document.getElementById("prev");
-  const next=document.getElementById("next");
-  const submitTop=document.getElementById("submitTop");
+const TOTAL = 25;
+const SCORE_PER = 4;
+let questions = [];
+let answers = Array(TOTAL).fill(null);
+let current = 0;
+let timeLeft = 50 * 60;
+let timerInterval;
 
-  const validCredentials={
-    "uus":"123",
-    "kimjong2":"kimju456",
-    "siswa01":"tryout26",
-    "koreafan":"hanguk789",
-    "topik2026":"seoul2026"
-  };
+fetch("soal.json")
+.then(r=>r.json())
+.then(d=>{
+  questions = d;
+  renderQuestion();
+  startTimer();
+});
 
-  const kodeMapping={
-    "B12345":"soal1.json",
-    "A09008":"soal2.json",
-    "W11765":"soal3.json",
-    "H66666":"soal4.json"
-  };
+function startTimer(){
+  timerInterval = setInterval(()=>{
+    timeLeft--;
+    let m = String(Math.floor(timeLeft/60)).padStart(2,"0");
+    let s = String(timeLeft%60).padStart(2,"0");
+    document.getElementById("timer").innerText = `${m}:${s}`;
+    if(timeLeft<=0) submitQuiz(true);
+  },1000);
+}
 
-  const GITHUB_RAW_BASE="https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
+function renderQuestion(){
+  const q = questions[current];
+  let html = "";
 
-  let questions=[];
-  let current=0;
-  let userAnswers=[];
-  let timerInterval;
-  let timeLeft=50*60;
+  if(q.audio) html += `<audio controls src="${q.audio}"></audio>`;
+  if(q.image) html += `<img src="${q.image}" style="width:100%">`;
 
-  btnLogin.addEventListener("click",()=>{
-    const u=username.value.trim();
-    const p=password.value.trim();
-    const k=kode.value.trim().toUpperCase();
-    if(validCredentials[u] && validCredentials[u]===p && kodeMapping[k]){
-      loginPage.style.display="none";
-      quizPage.style.display="block";
-      startTimer();
-      loadSoal(kodeMapping[k]);
-    }else{
-      alert("Username, Password, atau Kode Soal salah bro!");
+  html += `
+  <div class="box-question">
+    <b>Soal ${current+1}</b><br>${q.question}
+  `;
+
+  q.options.forEach((opt,i)=>{
+    html+=`
+    <label class="option-item">
+      <input type="radio" name="opt" ${answers[current]===i?"checked":""}
+        onchange="answers[${current}]=${i}">
+      <span class="option-letter">${i+1}</span>
+      <span>${opt}</span>
+    </label>`;
+  });
+
+  html += "</div>";
+  document.getElementById("quizContainer").innerHTML = html;
+}
+
+function nextQ(){ if(current<TOTAL-1){current++;renderQuestion();}}
+function prevQ(){ if(current>0){current--;renderQuestion();}}
+
+function submitQuiz(auto){
+  clearInterval(timerInterval);
+  let score=0, review="";
+  questions.forEach((q,i)=>{
+    if(answers[i]===q.correct){score+=SCORE_PER;}
+    else{
+      review+=`<p><b>Soal ${i+1}</b><br>${q.explanation}</p>`;
     }
   });
 
-  async function loadSoal(file){
-    try{
-      const res=await fetch(GITHUB_RAW_BASE+file+"?t="+Date.now());
-      if(!res.ok) throw new Error("File tidak ditemukan");
-      questions=await res.json();
-      userAnswers=Array(questions.length).fill(null);
-      render();
-      show(0);
-    }catch(e){
-      alert("Gagal load file soal! "+e.message);
-      console.error(e);
-    }
-  }
+  document.getElementById("scoreText").innerHTML=`Nilai: <b>${score}</b>`;
+  document.getElementById("reviewBox").innerHTML=review||"Semua benar 🎉";
 
-  function render(){
-    form.innerHTML="";
-    questions.forEach((q,i)=>{
-      const div=document.createElement("div");
-      div.className="question-wrapper";
-      let html=`
-        <div class="box-passage">
-          ${q.audio?`<audio controls src="${q.audio}"></audio>`:""}
-          ${q.image?`<img src="${q.image}" alt="Gambar ${i+1}">`:""}
-        </div>
-        <div class="box-question">
-          <p><strong>Pertanyaan ${i+1}:</strong> ${q.question}</p>
-          <div class="options">
-      `;
-      const letters=["1","2","3","4"];
-      letters.forEach((l,idx)=>{
-        const keys=Object.keys(q.options);
-        if(idx<keys.length){
-          const key=keys[idx];
-          const val=q.options[key];
-          html+=`
-            <label class="option-item">
-              <input type="radio" name="q${i}" value="${key}">
-              <span class="option-letter">${l}</span>
-              <span class="option-text">${val}</span>
-            </label>
-          `;
-        }
-      });
-      html+="</div></div>";
-      div.innerHTML=html;
-      form.appendChild(div);
+  localStorage.setItem("lastResult",JSON.stringify({
+    score, answers, date:new Date().toLocaleString()
+  }));
 
-      div.querySelectorAll("input[type=radio]").forEach(r=>{
-        r.addEventListener("change",()=>userAnswers[i]=r.value);
-      });
-    });
-  }
-
-  function show(n){
-    document.querySelectorAll(".question-wrapper")
-      .forEach((q,i)=>q.classList.toggle("active",i===n));
-    current=n;
-  }
-
-  prev.onclick=()=>current>0 && show(current-1);
-  next.onclick=()=>current<questions.length-1 && show(current+1);
-  submitTop.onclick=()=>alert("SUBMIT OK (dummy)");
-
-  function startTimer(){
-    timerInterval=setInterval(()=>{
-      const mins=String(Math.floor(timeLeft/60)).padStart(2,'0');
-      const secs=String(timeLeft%60).padStart(2,'0');
-      document.getElementById("timer").textContent=`${mins}:${secs}`;
-      timeLeft--;
-      if(timeLeft<0) clearInterval(timerInterval);
-    },1000);
-  }
-});
+  document.getElementById("quizContainer").style.display="none";
+  document.getElementById("resultBox").style.display="block";
+}
 </script>
-
 </body>
 </html>
-
-
-
-
-
-
-
