--- a/index.html
+++ b/index.html
@@ -4,203 +4,168 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Latihan Reading Korea</title>
-
 <style>
-body{
-  margin:0;
-  font-family:Segoe UI, Arial, sans-serif;
-  background:#f2f2f2;
-}
+body{margin:0;font-family:'Segoe UI',Arial,sans-serif;background:#f5f5f5}
+#login-page{min-height:100vh;display:flex;justify-content:center;align-items:center;
+background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
+url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') center/cover no-repeat}
+.login-container{width:90%;max-width:380px;background:#fff;padding:35px;text-align:center}
+input{width:100%;padding:14px;margin:8px 0}
+button{width:100%;padding:16px;background:#3f51b5;color:#fff;border:none;font-weight:bold}
 
-.header{
-  position:fixed;
-  top:0;
-  left:0;
-  right:0;
-  display:flex;
-  justify-content:space-between;
-  padding:8px 12px;
-  background:#fff;
-  border-bottom:1px solid #ccc;
-  z-index:1000;
-}
+#quiz-page{display:none;padding-top:70px;padding-bottom:70px}
+.header-fixed{position:fixed;top:0;left:0;width:100%;display:flex;background:#fff;z-index:1000}
+.submit-top,.timer{flex:1;padding:12px;text-align:center;font-weight:bold;color:#fff}
+.submit-top{background:#f44336}
+.timer{background:#4caf50}
 
-.timer, .submit-btn{
-  width:90px;
-  height:36px;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-weight:bold;
-  font-size:14px;
-}
+.container{max-width:540px;margin:auto;padding:10px;height:calc(100vh - 140px);overflow:auto}
+.question-wrapper{display:none}
+.question-wrapper.active{display:block}
+.box-passage{background:#e3f2fd;padding:15px;margin-bottom:10px}
+.box-question{background:#fff3e0;padding:15px}
 
-.timer{background:#eee;}
-.submit-btn{background:#ff9800;color:#fff;cursor:pointer}
+.option-item{display:flex;margin:8px 0}
+.option-circle{width:24px;height:24px;border:2px solid #999;border-radius:50%;
+text-align:center;line-height:22px;margin-right:8px}
+.option-item input{display:none}
+.option-item input:checked + .option-circle{background:#bbdefb;border-color:#2196f3}
 
-.container{
-  max-width:480px;
-  margin:70px auto 80px;
-  padding:12px;
-}
-
-.box-passage{
-  background:#e3f2fd;
-  padding:12px;
-  margin-bottom:12px;
-}
-
-.box-question{
-  background:#fff;
-  padding:12px;
-}
-
-.option-item{
-  display:flex;
-  margin:10px 0;
-  cursor:pointer;
-}
-
-.option-item input{display:none;}
-
-.option-letter{
-  width:28px;
-  height:28px;
-  border-radius:50%;
-  border:2px solid #1976d2;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  margin-right:10px;
-  color:#1976d2;
-  font-weight:bold;
-}
-
-.option-item input:checked + .option-letter{
-  background:#64b5f6;
-  color:#fff;
-}
-
-.footer-nav{
-  position:fixed;
-  bottom:0;
-  left:0;
-  right:0;
-  display:flex;
-  background:#fff;
-  border-top:1px solid #ccc;
-}
-
-.footer-nav button{
-  flex:1;
-  height:44px;
-  border:none;
-  font-weight:bold;
-}
-
-#resultBox{
-  display:none;
-  padding:16px;
-}
+.nav-bottom{position:fixed;bottom:0;left:0;width:100%;display:flex}
+.nav-bottom button{flex:1;padding:12px;border:none;color:#fff;font-weight:bold}
+#prev{background:#2196f3}
+#next{background:#ff9800}
 </style>
 </head>
-
 <body>
 
-<div class="header">
-  <div class="submit-btn" onclick="submitQuiz(false)">SUBMIT</div>
-  <div class="timer" id="timer">50:00</div>
+<div id="login-page">
+  <div class="login-container">
+    <h2>Latihan Reading Korea</h2>
+    <input id="username" placeholder="Username">
+    <input id="password" type="password" placeholder="Password">
+    <input id="kode" placeholder="Kode Soal">
+    <button id="btnLogin">MULAI</button>
+  </div>
 </div>
 
-<div class="container" id="quizContainer"></div>
+<div id="quiz-page">
+  <div class="header-fixed">
+    <div class="submit-top" id="submitTop">SUBMIT</div>
+    <div class="timer" id="timer">50:00</div>
+  </div>
 
-<div class="footer-nav">
-  <button onclick="prevQ()">PREV</button>
-  <button onclick="nextQ()">NEXT</button>
-</div>
+  <div class="container">
+    <form id="quiz-form"></form>
+  </div>
 
-<div class="container" id="resultBox">
-  <h2>Hasil Ujian</h2>
-  <div id="scoreText"></div>
-  <hr>
-  <div id="reviewBox"></div>
+  <div class="nav-bottom">
+    <button id="prev">PREV</button>
+    <button id="next">NEXT</button>
+  </div>
 </div>
 
 <script>
-const TOTAL = 25;
-const SCORE_PER = 4;
-let questions = [];
-let answers = Array(TOTAL).fill(null);
-let current = 0;
-let timeLeft = 50 * 60;
-let timerInterval;
+const loginPage = document.getElementById("login-page");
+const quizPage  = document.getElementById("quiz-page");
+const btnLogin  = document.getElementById("btnLogin");
+const submitTop= document.getElementById("submitTop");
+const quizForm = document.getElementById("quiz-form");
+const prevBtn  = document.getElementById("prev");
+const nextBtn  = document.getElementById("next");
+const timerEl  = document.getElementById("timer");
 
-fetch("soal.json")
-.then(r=>r.json())
-.then(d=>{
-  questions = d;
-  renderQuestion();
+const validCredentials={
+  "uus":"123",
+  "kimjong2":"kimju456",
+  "siswa01":"tryout26",
+  "koreafan":"hanguk789",
+  "topik2026":"seoul2026"
+};
+const kodeMapping={
+  "B12345":"soal1.json",
+  "A09008":"soal2.json",
+  "W11765":"soal3.json",
+  "H66633":"soal4.json"
+};
+const BASE="https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
+
+let currentUser="",currentKode="";
+let questions=[],answers=[],current=0;
+let timeLeft=50*60,timerInterval,submitted=false;
+
+btnLogin.onclick=()=>{
+  const u=username.value.trim();
+  const p=password.value.trim();
+  const k=kode.value.trim().toUpperCase();
+  if(validCredentials[u]!==p||!kodeMapping[k]){
+    alert("Username, Password, atau Kode Soal salah!");
+    return;
+  }
+  currentUser=u; currentKode=k;
+  loginPage.style.display="none";
+  quizPage.style.display="block";
   startTimer();
-});
+  loadSoal(kodeMapping[k]);
+};
+
+async function loadSoal(file){
+  const r=await fetch(BASE+file+"?t="+Date.now());
+  questions=(await r.json()).slice(0,25);
+  answers=Array(questions.length).fill(null);
+  render(); show(0);
+}
+
+function render(){
+  quizForm.innerHTML="";
+  questions.forEach((q,i)=>{
+    const d=document.createElement("div");
+    d.className="question-wrapper";
+    d.innerHTML=`
+      <div class="box-passage">
+        ${q.audio?`<audio controls src="${q.audio}"></audio>`:""}
+        ${q.image?`<img src="${q.image}" width="100%">`:""}
+      </div>
+      <div class="box-question">
+        <b>${i+1}.</b> ${q.question}
+        ${Object.entries(q.options).map(([k,v],n)=>`
+          <label class="option-item">
+            <input type="radio" name="q${i}" value="${k}">
+            <span class="option-circle">${n+1}</span>${v}
+          </label>`).join("")}
+      </div>`;
+    d.querySelectorAll("input").forEach(r=>r.onchange=()=>answers[i]=r.value);
+    quizForm.appendChild(d);
+  });
+}
+
+function show(n){
+  document.querySelectorAll(".question-wrapper")
+    .forEach((q,i)=>q.classList.toggle("active",i===n));
+  current=n;
+}
+
+prevBtn.onclick=()=>current>0&&show(current-1);
+nextBtn.onclick=()=>current<questions.length-1&&show(current+1);
+submitTop.onclick=()=>submitQuiz();
+
+function submitQuiz(){
+  if(submitted) return;
+  submitted=true;
+  clearInterval(timerInterval);
+  let benar=0;
+  questions.forEach((q,i)=>answers[i]===q.correct&&benar++);
+  alert(`Selesai! Nilai: ${benar*4}`);
+}
 
 function startTimer(){
-  timerInterval = setInterval(()=>{
+  timerInterval=setInterval(()=>{
+    const m=String(Math.floor(timeLeft/60)).padStart(2,"0");
+    const s=String(timeLeft%60).padStart(2,"0");
+    timerEl.textContent=`${m}:${s}`;
     timeLeft--;
-    let m = String(Math.floor(timeLeft/60)).padStart(2,"0");
-    let s = String(timeLeft%60).padStart(2,"0");
-    document.getElementById("timer").innerText = `${m}:${s}`;
-    if(timeLeft<=0) submitQuiz(true);
+    if(timeLeft<0) submitQuiz();
   },1000);
-}
-
-function renderQuestion(){
-  const q = questions[current];
-  let html = "";
-
-  if(q.audio) html += `<audio controls src="${q.audio}"></audio>`;
-  if(q.image) html += `<img src="${q.image}" style="width:100%">`;
-
-  html += `
-  <div class="box-question">
-    <b>Soal ${current+1}</b><br>${q.question}
-  `;
-
-  q.options.forEach((opt,i)=>{
-    html+=`
-    <label class="option-item">
-      <input type="radio" name="opt" ${answers[current]===i?"checked":""}
-        onchange="answers[${current}]=${i}">
-      <span class="option-letter">${i+1}</span>
-      <span>${opt}</span>
-    </label>`;
-  });
-
-  html += "</div>";
-  document.getElementById("quizContainer").innerHTML = html;
-}
-
-function nextQ(){ if(current<TOTAL-1){current++;renderQuestion();}}
-function prevQ(){ if(current>0){current--;renderQuestion();}}
-
-function submitQuiz(auto){
-  clearInterval(timerInterval);
-  let score=0, review="";
-  questions.forEach((q,i)=>{
-    if(answers[i]===q.correct){score+=SCORE_PER;}
-    else{
-      review+=`<p><b>Soal ${i+1}</b><br>${q.explanation}</p>`;
-    }
-  });
-
-  document.getElementById("scoreText").innerHTML=`Nilai: <b>${score}</b>`;
-  document.getElementById("reviewBox").innerHTML=review||"Semua benar 🎉";
-
-  localStorage.setItem("lastResult",JSON.stringify({
-    score, answers, date:new Date().toLocaleString()
-  }));
-
-  document.getElementById("quizContainer").style.display="none";
-  document.getElementById("resultBox").style.display="block";
 }
 </script>
 </body>
