--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body{margin:0;font-family:Arial,sans-serif;background:#f5f5f5}
 
 /* LOGIN */
 #login-page{
-  display:flex;min-height:100vh;
+  min-height:100vh;display:flex;
   justify-content:center;align-items:center;
   background:#263238
 }
@@ -20,12 +20,18 @@ body{margin:0;font-family:Arial,sans-serif;background:#f5f5f5}
   width:90%;max-width:380px;text-align:center
 }
 input,button{width:100%;padding:14px;margin:8px 0}
-button{background:#3f51b5;color:#fff;border:none;font-weight:bold}
+button{background:#3f51b5;color:#fff;border:none;font-weight:bold;cursor:pointer}
 
 /* QUIZ */
 #quiz-page{padding-top:60px;padding-bottom:60px}
-.header{position:fixed;top:0;left:0;width:100%;display:flex}
-.submit-btn,.timer{flex:1;padding:12px;color:#fff;font-weight:bold;text-align:center}
+.header{
+  position:fixed;top:0;left:0;width:100%;
+  display:flex;z-index:1000
+}
+.submit-btn,.timer{
+  flex:1;padding:12px;
+  color:#fff;font-weight:bold;text-align:center
+}
 .submit-btn{background:#e53935}
 .timer{background:#43a047}
 
@@ -37,30 +43,43 @@ button{background:#3f51b5;color:#fff;border:none;font-weight:bold}
 .qbox{display:none}
 .qbox.active{display:block}
 
-.option{display:flex;margin:6px 0}
+.option{display:flex;margin:8px 0;cursor:pointer}
 .option input{display:none}
 .circle{
-  width:24px;height:24px;border:2px solid #888;
-  border-radius:50%;text-align:center;
-  line-height:22px;margin-right:8px
+  width:24px;height:24px;
+  border:2px solid #888;
+  text-align:center;
+  line-height:22px;
+  margin-right:8px
 }
 .option input:checked + .circle{
   background:#bbdefb;border-color:#2196f3
 }
 
-.nav{position:fixed;bottom:0;left:0;width:100%;display:flex}
-.nav button{flex:1;padding:12px;border:none;color:#fff;font-weight:bold}
+.nav{
+  position:fixed;bottom:0;left:0;width:100%;
+  display:flex
+}
+.nav button{
+  flex:1;padding:12px;
+  border:none;color:#fff;
+  font-weight:bold
+}
 #prev{background:#1e88e5}
 #next{background:#fb8c00}
 
 /* RESULT */
 #result-page{padding:20px}
-.wrong{background:#ffebee;padding:10px;margin:8px 0}
+.wrong{
+  background:#ffebee;
+  padding:10px;margin:8px 0
+}
 </style>
 </head>
 
 <body>
 
+<!-- LOGIN -->
 <div id="login-page">
   <div class="login-box">
     <h2>Latihan Reading Korea</h2>
@@ -71,6 +90,7 @@ button{background:#3f51b5;color:#fff;border:none;font-weight:bold}
   </div>
 </div>
 
+<!-- QUIZ -->
 <div id="quiz-page">
   <div class="header">
     <div class="submit-btn" id="submitBtn">SUBMIT</div>
@@ -85,21 +105,22 @@ button{background:#3f51b5;color:#fff;border:none;font-weight:bold}
   </div>
 </div>
 
+<!-- RESULT -->
 <div id="result-page">
-  <h2>Hasil</h2>
+  <h2>Hasil Ujian</h2>
   <div id="score"></div>
   <div id="review"></div>
-  <button onclick="location.reload()">KEMBALI</button>
+  <button onclick="backToLogin()">KEMBALI</button>
 </div>
 
 <script>
-/* === ELEMENT === */
+/* ===== ELEMENT ===== */
 const loginPage=document.getElementById("login-page");
 const quizPage=document.getElementById("quiz-page");
 const resultPage=document.getElementById("result-page");
 const quizForm=document.getElementById("quizForm");
 
-/* === LOGIN DATA === */
+/* ===== LOGIN DATA ===== */
 const validCredentials={
   "uus":"123",
   "kimjong2":"kimju456",
@@ -115,37 +136,37 @@ const kodeMapping={
 };
 const BASE="https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
 
-/* === STATE === */
+/* ===== STATE ===== */
 let questions=[],answers=[],current=0;
 let timeLeft=50*60,timerInt,submitted=false;
 
-/* === LOGIN === */
-btnLogin.onclick=async()=>{
+/* ===== LOGIN ===== */
+btnLogin.onclick=()=>{
   const u=username.value.trim();
   const p=password.value.trim();
   const k=kode.value.trim().toUpperCase();
 
-  if(validCredentials[u]!==p||!kodeMapping[k]){
-    alert("Login salah");
+  if(validCredentials[u]!==p || !kodeMapping[k]){
+    alert("Username, Password, atau Kode Soal salah!");
     return;
   }
 
   loginPage.style.display="none";
   quizPage.style.display="block";
-
   startTimer();
   loadSoal(kodeMapping[k]);
 };
 
-/* === LOAD === */
+/* ===== LOAD SOAL ===== */
 async function loadSoal(file){
   const r=await fetch(BASE+file+"?t="+Date.now());
   questions=(await r.json()).slice(0,25);
   answers=Array(questions.length).fill(null);
-  render(); show(0);
+  render();
+  show(0);
 }
 
-/* === RENDER === */
+/* ===== RENDER ===== */
 function render(){
   quizForm.innerHTML="";
   questions.forEach((q,i)=>{
@@ -159,7 +180,8 @@ function render(){
         <label class="option">
           <input type="radio" name="q${i}" value="${k}">
           <span class="circle">${n+1}</span>${v}
-        </label>`).join("")}
+        </label>
+      `).join("")}
     `;
     d.querySelectorAll("input").forEach(r=>{
       r.onchange=()=>answers[i]=r.value;
@@ -168,26 +190,42 @@ function render(){
   });
 }
 
-/* === NAV === */
+/* ===== AUDIO STOP ===== */
+function stopAllAudio(){
+  document.querySelectorAll("audio").forEach(a=>{
+    a.pause();
+    a.currentTime=0;
+  });
+}
+
+/* ===== NAV ===== */
 function show(n){
+  stopAllAudio();
   document.querySelectorAll(".qbox")
     .forEach((q,i)=>q.classList.toggle("active",i===n));
   current=n;
 }
-prev.onclick=()=>current>0&&show(current-1);
-next.onclick=()=>current<questions.length-1&&show(current+1);
+prev.onclick=()=>current>0 && show(current-1);
+next.onclick=()=>current<questions.length-1 && show(current+1);
 
-/* === SUBMIT === */
+/* ===== SUBMIT ===== */
 submitBtn.onclick=()=>submitQuiz(false);
 
 function submitQuiz(auto){
   if(submitted) return;
+
   if(!auto){
     const idx=answers.findIndex(a=>a===null);
-    if(idx!==-1){alert("Soal "+(idx+1)+" belum dijawab");show(idx);return;}
+    if(idx!==-1){
+      alert("Soal nomor "+(idx+1)+" belum dijawab");
+      show(idx);
+      return;
+    }
   }
+
   submitted=true;
   clearInterval(timerInt);
+  stopAllAudio();
 
   quizPage.style.display="none";
   resultPage.style.display="block";
@@ -195,18 +233,22 @@ function submitQuiz(auto){
   let benar=0;
   review.innerHTML="";
   questions.forEach((q,i)=>{
-    if(answers[i]===q.correct) benar++;
-    else review.innerHTML+=`
-      <div class="wrong">
-        Soal ${i+1}<br>
-        Jawaban benar: ${q.correct}<br>
-        ${q.explanation||""}
-      </div>`;
+    if(answers[i]===q.correct){
+      benar++;
+    }else{
+      review.innerHTML+=`
+        <div class="wrong">
+          <b>Soal ${i+1}</b><br>
+          Jawaban benar: ${q.correct}<br>
+          ${q.explanation||""}
+        </div>
+      `;
+    }
   });
-  score.innerHTML="<h3>Nilai: "+(benar*4)+"</h3>";
+  score.innerHTML="<h3>Nilai Akhir: "+(benar*4)+"</h3>";
 }
 
-/* === TIMER === */
+/* ===== TIMER ===== */
 function startTimer(){
   timerInt=setInterval(()=>{
     const m=String(Math.floor(timeLeft/60)).padStart(2,"0");
@@ -215,6 +257,11 @@ function startTimer(){
     timeLeft--;
     if(timeLeft<0) submitQuiz(true);
   },1000);
+}
+
+/* ===== BACK ===== */
+function backToLogin(){
+  location.reload();
 }
 
 /* INIT */
